[package]
name = "laim"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.9", features = ["js"] }
gloo-storage = "0.2.2"
js-sys = "0.3.63"
leptos = { version = "0.4.2", features = ["nightly", "csr"] }
rand = "0.8.5"
rustc-hash = "1.1.0"
serde = "1.0.163"
serde_json = "1.0.96"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-subscriber-wasm = "0.1.0"
wasm-bindgen = "0.2.86"
web-sys = { version = "0.3.63", features = ["Document", "MouseEvent", "NamedNodeMap", "Attr", "EventTarget"] }
web-time = "0.2.0"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
