[package]
name = "laim"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
js-sys = "0.3"
leptos = { version = "0.7", features = ["nightly", "csr"] }
rand = "0.9"
rustc-hash = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-subscriber-wasm = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Document", "MouseEvent", "NamedNodeMap", "Attr", "EventTarget", "Storage"] }
web-time = "1"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
