cargo-features = ["codegen-backend"]

[package]
name = "laim"
version = "0.2.4"
edition = "2021"
license = "WTFPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
js-sys = "0.3"
leptos = { version = "0.7", features = ["nightly", "csr"] }
leptos_router = { version = "0.7.8", features = ["nightly"] }
rand = "0.9"
rustc-hash = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-subscriber-wasm = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Document", "MouseEvent", "NamedNodeMap", "Attr", "EventTarget", "Storage"] }
web-time = "1"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
